--- a/templates/_includes/navbar.html.twig
+++ b/templates/_includes/navbar.html.twig
@@ -4,4 +4,5 @@
     <a href="/exits">Sorties</a>
     <a href="/classes">Classes</a>
     <a href="{{ path('home_internat')}}">Internat</a>
+    <a href="{{ path('home_research')}}">Recherche</a>
 </nav>
