--- a/templates/Home/index.html.twig
+++ b/templates/Home/index.html.twig
@@ -17,25 +17,45 @@
         <div class="student-area">
             <section class="entry-side student-zone">
                 <h2>Entrées :</h2>
+                {% for scan in entryList %}
+                    <article class="entry-card student-in">
+                        <p>{{ ux_icon('streamline:user-profile-focus-solid') }}</p>
+                        <div class="student-info">
+                            <h2 class="student-card-title"> {{ scan.student.firstname }} {{ scan.student.lastname }} -
+                                {{ scan.student.classe.name }}</h2>
+                            <p>{{ scan.student.regime.name }}</p>
+                        </div>
+                    </article>
+                {% endfor %}
             </section>
             <section class="exit-side student-zone">
                 <h2>Sorties :</h2>
+                {% for scan in exitList %}
+                    <article class="exit-card student-out">
+                        <p>{{ ux_icon('streamline:user-profile-focus-solid') }}</p>
+                        <div class="student-info">
+                            <h2 class="student-card-title"> {{ scan.student.firstname }} {{ scan.student.lastname }} -
+                                {{ scan.student.classe.name }}</h2>
+                            <p>{{ scan.student.regime.name }}</p>
+                        </div>
+                    </article>
+                {% endfor %}
             </section>
         </div>
     </main>
 
     <script>
-        const entry = document.getElementById('entry');
-        const exit = document.getElementById('exit');
+        const entryInput = document.getElementById('entry');
+        const exitInput = document.getElementById('exit');
 
-        entry.addEventListener("change", function (event) {
-            window.location.href = `http://localhost:8000/student/enter/${event.target.value}`;
-            entry.value = '';
+        entryInput.addEventListener("change", function (event) {
+            window.location.replace(`http://localhost:8000/student/enter/${event.target.value}`);
+            entryInput.value = '';
         })
 
-        exit.addEventListener("change", function (event) {
-            window.location.href = `http://localhost:8000/student/exit/${event.target.value}`;
-            exit.value= '';
+        exitInput.addEventListener("change", function (event) {
+            window.location.replace(`http://localhost:8000/student/exit/${event.target.value}`);
+            exitInput.value= '';
         })
     </script>
 {% endblock %}
